WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49335
Closing tabs sometimes crashes the WebProcess in invalidateContentsAndWindow
https://bugs.webkit.org/show_bug.cgi?id=49335
Summary
Closing tabs sometimes crashes the WebProcess in invalidateContentsAndWindow
Anders Carlsson
Reported
2010-11-10 12:21:26 PST
Closing tabs sometimes crashes the WebProcess in invalidateContentsAndWindow
Attachments
Patch
(1.79 KB, patch)
2010-11-10 12:24 PST
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-11-10 12:21:59 PST
<
rdar://problem/8646621
>
Anders Carlsson
Comment 2
2010-11-10 12:24:22 PST
Created
attachment 73523
[details]
Patch
Anders Carlsson
Comment 3
2010-11-10 12:30:28 PST
Committed
r71761
: <
http://trac.webkit.org/changeset/71761
>
WebKit Review Bot
Comment 4
2010-11-10 13:14:33 PST
http://trac.webkit.org/changeset/71761
might have broken GTK Linux 32-bit Release
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug