Closing tabs sometimes crashes the WebProcess in invalidateContentsAndWindow https://bugs.webkit.org/show_bug.cgi?id=49335 <rdar://problem/8646621>

Reviewed by Dan Bernstein.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::changeAcceleratedCompositingMode):
If we fail to send the DidChangeAcceleratedCompositing message, don't null out the
drawing area. This will happen during page teardown.

Canonical link: https://commits.webkit.org/62239@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71761 268f45cc-cd09-0410-ab3c-d52691b4dbfc